--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "aws-sdk": "^2.1192.0",
     "axios": "^0.27.2",
     "bignumber.js": "^9.1.0",
-    "ethers": "^5.6.2"
+    "ethers": "^5.6.2",
+    "serverless-plugin-tag-events": "^1.1.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
