--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: infinix
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
