Added need creds
Signed-off-by: Idowu 'hydeenoble' Emehinola <hydeenoble39@gmail.com>

--- a/.github/workflows/.github-ci.yaml
+++ b/.github/workflows/.github-ci.yaml
@@ -18,16 +18,19 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ${{secrets.AWS_REGION}}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-
+    
+    
+      # helm subenv -f ./serverless.yaml
       - name: Serverless Deploy
         run: |
           npm install
           npm install -g serverless
-          helm subenv -f ./serverless.yaml
           serverless config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }} -o 
           serverless deploy  --force --verbose
