Moved helms chart to tradersisland AWS account
Signed-off-by: Idowu 'hydeenoble' Emehinola <hydeenoble39@gmail.com>

--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,12 @@ provider:
     TASK_TOPIC: { Ref: TaskTopic }
   apiGateway:
     shouldStartNameWithService: true
+  stackTags:
+    Entity: WIM3
+    Project: TranderIsland
+  tags:
+    Entity: WIM3
+    Project: TranderIsland
   iam:
     role:
       statements:
