Moved helms chart to tradersisland AWS account
Signed-off-by: Idowu 'hydeenoble' Emehinola <hydeenoble39@gmail.com>

--- a/serverless.yml
+++ b/serverless.yml
@@ -57,11 +57,11 @@ resources:
         BillingMode: PAY_PER_REQUEST
         StreamSpecification:
           StreamViewType: NEW_IMAGE
-        Tags:
-          - Key: Entity
-            Value: WIM3
-          - Key: Project
-            Value: TranderIsland
+        # Tags:
+        #   - Key: Entity
+        #     Value: WIM3
+        #   - Key: Project
+        #     Value: TranderIsland
     TaskTopic:
       Type: AWS::SNS::Topic
       Properties:
