Moved helms chart to tradersisland AWS account
Signed-off-by: Idowu 'hydeenoble' Emehinola <hydeenoble39@gmail.com>

--- a/serverless.yml
+++ b/serverless.yml
@@ -40,6 +40,7 @@ provider:
           Action:
             - dynamodb:*
             - events:*
+            - tag:*
           Resource: '*'
 
 resources:
@@ -57,11 +58,11 @@ resources:
         BillingMode: PAY_PER_REQUEST
         StreamSpecification:
           StreamViewType: NEW_IMAGE
-        # Tags:
-        #   - Key: Entity
-        #     Value: WIM3
-        #   - Key: Project
-        #     Value: TranderIsland
+        Tags:
+          - Key: Entity
+            Value: WIM3
+          - Key: Project
+            Value: TranderIsland
     TaskTopic:
       Type: AWS::SNS::Topic
       Properties:
@@ -78,6 +79,11 @@ resources:
                 Service: events.amazonaws.com
               Action: sns:Publish
               Resource: '*'
+          Tags:
+            - Key: Entity
+              Value: WIM3
+            - Key: Project
+              Value: TranderIsland
         Topics:
           - Ref: TaskTopic
 
